<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C8013A"

        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView4"
            style="@style/title_TxtStyle"
            android:layout_marginTop="24dp"
            android:text="@string/title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/question_indexField"
            android:layout_width="203dp"
            android:layout_height="44dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/asap_medium"
            android:text="@string/out_of_text"
            android:textColor="#F7DC6F"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.177"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_View"
            android:layout_width="389dp"
            android:layout_height="141dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#93002A"
            android:elevation="12dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_indexField">

            <TextView
                android:id="@+id/question_textView"
                style="@style/title_TxtStyle"
                android:layout_width="369dp"
                android:layout_height="116dp"
                android:layout_margin="@dimen/question_text_margin"
                android:padding="@dimen/question_text_padding"
                android:text="@string/placeholder_question"
                android:textColor="@color/Question_TxtColour"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/Button_Style"
            android:layout_width="0dp"
            android:text="@string/True_ButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.289"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_View"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_false"
            style="@style/Button_Style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/False_ButtonText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true" />

        <Button
            android:id="@+id/button_next"
            style="@style/Button_Style"
            android:layout_width="126dp"
            android:layout_height="67dp"
            android:layout_marginTop="120dp"
            android:text="@string/Next_ButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.972"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false"
            app:layout_constraintVertical_bias="0.201" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>